--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcc 'PS'
 - !lcsh 'Short stories'
+- GITenberg
 title: And All the Earth a Grave
 url: http://www.gutenberg.org/ebooks/23146
